<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="me.dzed.uwscholarshipfinder.ScholarshipActivity"
        tools:showIn="@layout/activity_scholarship"
        android:orientation="vertical">


        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/title"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/status"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/value"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programs"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/programs"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/description"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/type"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/citizenship"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/citizenship"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/deadlines"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/years"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/enrollmentYear"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eligibility"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/eligibility"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/instructions"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/additional"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/contact"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:gravity="center_vertical|left"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/link"
            android:gravity="center_vertical|left" />


    </LinearLayout>

</ScrollView>
